# EVTLR-Project

./: .env.example  .gitignore  .lychee.toml  .markdownlint.json  .markdownlintignore  .prettierrc.json  .stylelintrc.json  .yamllint.yml  AGENTS.md  LICENSE  NOTICE  README.md  SECRETS.md  commitlint.config.js  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml
.crewai/: .env.example  README.md  __init__.py  main.py  pyproject.toml  pytest.ini
.crewai/adr/: ADR-001-crewai-decision-log-scope.md  ADR-002-provider-priority-and-failover.md  ADR-003-local-quick-review-multipass.md  ADR-004-review-scope-contract-and-tiering.md  ADR-005-output-validation-and-data-engineering-specialist.md  ADR-006-persistent-review-memory-and-cli.md  ADR-007-terminal-executive-synthesis-stage.md  README.md
.crewai/config/: agents.yaml
.crewai/config/tasks/: agentic_review_tasks.yaml  ci_log_analysis_tasks.yaml  data_engineering_review_tasks.yaml  documentation_review_tasks.yaml  final_summary_tasks.yaml  finance_review_tasks.yaml  full_review_tasks.yaml  government_review_tasks.yaml  legal_review_tasks.yaml  marketing_review_tasks.yaml  quick_review_tasks.yaml  router_tasks.yaml  science_review_tasks.yaml  security_review_tasks.yaml  strategy_review_tasks.yaml
.crewai/crews/: __init__.py  agentic_review_crew.py  ci_log_analysis_crew.py  data_engineering_review_crew.py  documentation_review_crew.py  final_summary_crew.py  finance_review_crew.py  full_review_crew.py  government_review_crew.py  legal_review_crew.py  marketing_review_crew.py  quick_review_crew.py  router_crew.py  science_review_crew.py  security_review_crew.py  strategy_review_crew.py
.crewai/memory/: memory.json  suppressions.json
.crewai/memory/sql/: memory_seed.sql
.crewai/tests/: __init__.py  conftest.py  test_ci_output_parser_tool.py  test_cost_tracker.py  test_crew_integrity.py  test_github_tools.py  test_memory_cli.py  test_memory_manager.py  test_pr_metadata_tool.py  test_specialist_output.py  test_specialist_quality.py  test_workspace_tool.py
.crewai/tools/: README.md  __init__.py  ci_output_parser_tool.py  ci_tools.py  commit_summarizer_tool.py  cost_tracker.py  diff_parser.py  github_tools.py  memory_cli.py  memory_manager.py  pr_metadata_tool.py  related_files_tool.py  workspace_tool.py
.crewai/utils/: __init__.py  model_config.py  specialist_output.py
.devcontainer/: devcontainer.json
agentic/: README.md  agent_error_recovery.md  agentic_coding.md  autonomy_boundaries.md  context_budget_guide.md  contribute_standards.md  custom-instructions.md  file_organization.md  idempotent_design_patterns.md  instructions.md  markdown_style_guide.md  mermaid_style_guide.md  operational_readiness.md  workflow_guide.md
apps/: README.md
data/: DATA_SUMMARY.md  README.md
docs/: ai_docs.md  deployment_issues.txt  skills.md
notebooks/: README.md
(+142 files in other folders)
